# NekosBest.h

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.c
cmake/: version.h.in
examples/: CMakeLists.txt  download.c  main.c  search_and_download.c  simple_fetch.c  simple_search.c
http/: CMakeLists.txt  httpclient.h  httpclient_core.c  httpclient_curl.c  httpclient_win.c
include/: nekosbest.h
src/: CMakeLists.txt  categories.c  categories.h  client.c  client.h  download.c  fetch.c  httpclient.c  httpclient.h  httpclient_core.c  httpclient_curl.c  httpclient_libcurl.c  httpclient_win.c  httpclient_winhttp.c  info.c  nekosbest.c  response.c  response.h  search.c  version.h.in
